--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JavaScript Profesional",
   "main": "index.js",
   "scripts": {
-    "start": "live-server"
+    "start": "parcel index.html ejercicios/index.html ejercicios/**/*.html"
   },
   "keywords": [
     "platzi"
@@ -12,7 +12,12 @@
   "author": "Leonardo Benitez",
   "license": "ISC",
   "devDependencies": {
-    "live-server": "^1.2.1"
+    "live-server": "^1.2.1",
+    "parcel-bundler": "^1.12.4",
+    "typescript": "^3.7.4"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "browserslist": [
+    "last 1 Chrome version"
+  ]
 }
